하이퍼링크

--- a/src/html/03-image-figure.html
+++ b/src/html/03-image-figure.html
@@ -85,7 +85,9 @@
       alt를 비워놓으면 스크린 리더는 읽어주지 않는다. 대신 figcaption을 읽어준다.
       그러나 seo가 떨어짐 , 검색엔진최적화
 
-      lazy loading은 필요할 때만 로딩함
+      lazy loading은 필요할 때만 로딩함, 우선순위에 따라 설정
+
+      이미지의 크기를 미리 지정해놓으면 이미지를 가져올때 랜더링되고 repaint 시간을 줄일 수 있다...?
       -->
 
       <figcaption>드라마 굿파트너</figcaption>
