--- a/src/html/04-anchor.html
+++ b/src/html/04-anchor.html
@@ -48,7 +48,7 @@
     <a href="tel:+821023456789">고객센터 010-2345-6789</a>
 
     <hr />
-    <h2>하이퍼링크 및 이미지 UI 예제</h2>
+    <h2>이미지 UI 예제(링크)</h2>
 
     <figure>
       <img src="/src/assets/cafew/card-02-@1x.jpg" alt="카페" />
